# chat_bot

./: db.py  gpt.py  keyboards.py  main.py  pyproject.toml  requirements.txt
utils/: checkIsAgeCorrect.py
